<resources>
    <string name="app_name">খাদ্য নিরাপত্তা ও ভোক্তা অধিকার</string>
    <string name="topbar" translatable="false">খাদ্য নিরাপত্তা ও ভোক্তা অধিকার</string>
    <string name="kNirapotta_button_text" translatable="false">খাদ্য নিরাপত্তা গাইডলাইন</string>
    <string name="vokta_button_text" translatable="false">ভোক্তা অধিকার ও অভিযোগ</string>
    <string name="odhikar" translatable="false">অধিকার</string>
    <string name="oporadh" translatable="false">অপরাধ</string>
    <string name="protikar" translatable="false">প্রতিকার</string>
    <string name="dondo" translatable="false">দন্ড</string>
    <string name="ovizog" translatable="false">অভিযোগ</string>
    <string name="zogazog" translatable="false">যোগাযোগ</string>
    <string name="alltext" translatable="false">TextView</string>
    <string name="likhitoOvijog" translatable="false">লিখিত অভিযোগ</string>
    <string name="ovijuktoProtisthanerNam" translatable="false">অভিযুক্ত প্রতিষ্ঠানের নাম</string>
    <string name="ovijuktoProtisthanerThikana" translatable="false">অভিযুক্ত প্রতিষ্ঠানের ঠিকানা</string>
    <string name="promanSorupVauchar" translatable="false">প্রমাণ স্বরূপ ক্রয়ের ভাউচার/ রশিদ সংযুক্ত হবে</string>
    <string name="ovijogerBiboron" translatable="false">অভিযোগের বিবরণ</string>
    <string name="ovijogKarirBiboron" translatable="false">অভিযোগকারীর বিবরণ</string>
    <string name="ovijogkarirNaam" translatable="false">অভিযোগকারীর নাম</string>
    <string name="pitarNaam" translatable="false">পিতার নাম</string>
    <string name="matarNaam" translatable="false">মাতার নাম</string>
    <string name="bortomanThikana" translatable="false">বর্তমান ঠিকানা</string>
    <string name="sthayiThikana" translatable="false">স্থায়ী ঠিকানা</string>
    <string name="ovijogKorun" translatable="false">অভিযোগ করুন</string>
    <string name="pesha" translatable="false">পেশা</string>
    <string name="mobile" translatable="false">মোবাইল নং</string>
    <string name="email" translatable="false">ই-মেইল (যদি থাকে)</string>
    <string name="jatioPorichoyPotro" translatable="false">জাতীয় পরিচয় পত্র (যদি থাকে)</string>


    <string name="odhikarText" translatable="false">ভোক্তা অধিকার কি কি

জাতিসংঘ স্বীকৃত ভোক্তা অধিকার ৮ টি। \nযথা
 -মৌলিক চাহিদা পূরণের অধিকার (সংবিধান বিধৃত) \n
 -তথ্য পাওয়ার অধিকার (তথ্য অধিকার আইন, ২০০৯) \n
 -নিরাপদ পণ্য বা সেবা পাওয়ার অধিকার \n
 -পছন্দের অধিকার \n
 -জানার অধিকার \n
 -অভিযোগ করা ও প্রতিকার পাওয়ার অধিকার \n
 -ভোক্তা অধিকার ও দায়িত্ব সম্পর্কে শিক্ষা লাভের অধিকার \n
 -সুস্থ পরিবেশের অধিকার \n
উক্ত ৬টি অধিকার ভোক্তা অধিকার সংরক্ষণ আইন, ২০০৯ সহ প্রচলিত অন্যান্য ৪০ টিরও বেশি আইনে বিধৃত \n

ভোক্তা অধিকার সংরক্ষণ আইন, ২০০৯ \n

 -‘ভোক্তা অধিকার সংরক্ষণ আইন, ২০০৯’ \n
 বিস্তারিত দেখতে এইখানে ক্লিক করুন \n
 -‘The Consumers’ Right Protection Act, 2009’ \n
 ইংলিশ দেখতে এইখানে ক্লিক করুন \n

  আইনের উদ্দেশ্য \n

 -ভোক্তা অধিকার সংরক্ষণ ও উন্নয়ন \n
 -ভোক্তা অধিকার বিরোধী কার্য প্রতিরোধ\n
 -ভোক্তা অধিকার লঙ্ঘন জনিত অভিযোগ নিস্পত্তি\n
 -নিরাপদ পণ্য ও সেবা নিশ্চিত করণ\n
 -পণ্য ও সেবা ক্রয়ে প্রতারণা রোধ\n
 -ভোক্তা অধিকার ও দায়িত্ব সম্পর্কে গণসচেতনতা সৃষ্টি\n
\n
আইনটি বাস্তবায়নের দায়িত্ব\n
\n
 -বাণিজ্য মন্ত্রণালয়াধীন জাতীয় ভোক্তা অধিকার সংরক্ষণ অধিদপ্তরের মহা পরিচালক বা তাঁর ক্ষমতা প্রাপ্ত এক্সিকিউটিভ কর্মকর্তা\n
 -প্রত্যেক জেলার জেলা ম্যাজিস্ট্রেট বা তাঁর ক্ষমতা প্রাপ্ত এক্সিকিউটিভ ম্যাজিস্ট্রেট\n
\n
ভোক্তা কে\n
\n
 নিম্নোক্ত ব্যাক্তিগণ ভোক্তা\n
 বাণিজ্যিক উদ্দেশ্য ব্যতিত- যিনি\n
 -সম্পূর্ণ মূল্য পরিশোধ করে বা সম্পূর্ণ বাকিতে পণ্য অথবা সেবা ক্রয় করেন\n
 -আংশিক মূল্য পরিশোধ করে বা আংশিক বাকিতে পণ্য অথবা সেবা ক্রয় করেন\n
 -কিস্তিতে পণ্য বা সেবা ক্রয় করেন\n
 -বাণিজ্যিক উদ্দেশ্যে পণ্য ক্রয় বিক্রয় করেন\n
\n
ভোক্তা দায়িত্ব\n
\n
 -ভোক্তা অধিকার ও দায়িত্ব সম্পর্কে জানা\n
 -ভোক্তা অধিকার সংরক্ষণের সুফল সম্পর্কে জানা\n
 -ভোক্তা অধিকার বিরোধী কার্যের কুফল সম্পর্কে জানা\n
 -যাচাই বাছাই করে সঠিক পণ্য বা সেবা সঠিক মূল্যে কেনা\n
 -ভোক্তা অধিকার বাস্তবায়নে সংগঠিত ও সোচ্চার হওয়া\n
 -ভোক্তা অধিকার লঙ্ঘন জনিত অভিযোগ দায়ের করা\n
\n
বিক্রেতা কে\n
\n
 কোন পণ্যের\n
 -উৎপাদনকারী বা প্রস্তুতকারী\n
 -সরবরাহকারী\n
 -পাইকারী বিক্রেতা\n
 -খুচরা বিক্রেতা\n
</string>
    <string name="oporadhText" translatable="false">ভোক্তা অধিকার বিরোধী কার্য ও অপরাধ কি কি?\n

 -নির্ধারিত মূল্য অপেক্ষা অধিক মূল্যে কোন পণ্য, ঔষধ বা সেবা বিক্রয় বা বিক্রয়ের প্রস্তাব করা\n
 -জেনে শুনে ভেজাল মিশ্রিত পণ্য বিক্রয় বা বিক্রয়ের প্রস্তাব করা\n
 -স্বাস্থ্যের জন্য ক্ষতিকারক নিষিদ্ধ দ্রব্য কোন খাদ্য পণ্যের সাথে মিশ্রণ ও বিক্রয় করা\n
 -মিথ্যা বিজ্ঞাপন দ্বারা ক্রেতা সাধারণকে প্রতারিত করা\n
 -প্রতিশ্রুত পণ্য বা সেবা যথাযথভাবে বিক্রয় বা সরবরাহ না করা\n
 -ওজনে, বাটখারা বা ওজন পরিমাপক যন্ত্রে কারচুপি করা\n
 -পরিমাপে, দৈর্ঘ্য পরিমাপক ফিতা বা অন্য কিছুতে কারচুপি করা\n
 -কোন নকল পণ্য বা ঔষধ প্রস্তুত বা উৎপাদন করা\n
 -মেয়াদ উত্তীর্ণ পণ্য বা ঔষধ বিক্রয় বা বিক্রয়ের প্রস্তাব করা\n
 -নিষিদ্ধ ঘোষিত কোন কার্য করা যাতে সেবা গ্রহীতার জীবন বা নিরাপত্তা বিপন্ন হতে পারে\n
 -অবৈধ প্রক্রিয়ায় পণ্য উৎপাদন বা প্রক্রিয়াকরণ করা\n
 -অবহেলা, দায়িত্বহীনতা দ্বারা সেবাগ্রহীতার অর্থ বা স্বাস্থ্যহানি ইত্যাদি ঘটানো\n
 -পণ্যের মোড়ক ব্যবহার না করা বা মোড়কের গায়ে খুচরা বিক্রয় মূল্য, মেয়াদ উত্তীর্ণ তারিখ ইত্যাদি লেখা না থাকা\n
 -আইনানুগ বাধ্যবাধকতা অমান্য করে দোকান বা প্রতিষ্ঠানের সহজে দৃশ্যমান কোন স্থানে পণ্যের মূল্য তালিকা লটকায়ে প্রদর্শন না করা\n
 -আইনানুগ বাধ্যবাধকতা অমান্য করে দোকান বা প্রতিষ্ঠানের সেবার মূল্য তালিকা সংরক্ষণ না করা এবং সংশ্লিষ্ট স্থানে বা সহজে দৃশ্যমান কোন স্থানে উক্ত তালিকা লটকায়ে প্রদর্শন না করা\n
</string>
    <string name="protikarText" translatable="false">অভিযোগ ফৌজদারি প্রতিকার\n

 -ভোক্তা অধিকার বিরোধী অপরাধসমূহ প্রথম শ্রেণীর জুডিশিয়াল ম্যাজিস্ট্রেট কিংবা মেট্রোপলিটন ম্যাজিস্ট্রেট কর্তৃক বিচার্য\n
 -জাতীয় ভোক্তা অধিকার সংরক্ষণ অধিদপ্তর উচ্চতর শাস্তিবিধান কল্পে ম্যাজিস্ট্রেট আদালতের পরিবর্তে সংশ্লিষ্ট বিশেষ ট্রাইবুনালে মামলা দায়ের করতে পারবে\n
 -অভিযোগকারী ফৌজদারি মামলা সরাসরি দায়ের করতে পারবেন না\n
 -অভিযোগ দায়ের হওয়ার ৯০ দিনের মধ্যে জাতীয় ভোক্তা অধিকার সংরক্ষণ অধিদপ্তরের পক্ষ থেকে ফৌজদারি মামলা দায়েরের লক্ষ্যে অভিযোগ পত্র ম্যাজিস্ট্রেট আদালত বা বিশেষ ট্রাইবুনালে দাখিল করতে হবে\n
 -বিচারে দোষী সাব্যস্ত ব্যক্তিকে ম্যাজিস্ট্রেট আদালত সশ্রম বা বিনাশ্রম কারাদন্ড বা অর্থ দন্ড বা উভয় দন্ড প্রদানসহ মালামাল বাজেয়াপ্ত করতে পারবে\n
 -অভিযোগকারী জরিমানার ২৫ শতাংশ তাৎক্ষণিক ভাবে প্রাপ্য হবেন\n

দেওয়ানী প্রতিকার\n

 কোন ব্যক্তির বিরুদ্ধে ফৌজদারি কার্যক্রম সূচিত হওয়ার কিংবা ঐ ব্যক্তি অনুরুপ কার্যের জন্য ফৌজদারি অপরাধে দন্ডিত হওয়ার কারণে, ক্ষতিগ্রস্ত কোন ভোক্তা ঐ ব্যক্তির বিরুদ্ধে আর্থিক মূল্যে নিরূপণ যোগ্য ক্ষতির অনুরদ্ধ পাঁচগুণ পরিমাণ আর্থিক ক্ষতিপূরণ দাবী করে স্থানীয় অধুক্ষেত্রের যুগ্ম জেলা জজের আদালতে দেওয়ানী মামলা দায়ের করতে পারবেন।\n

প্রশাসনিক প্রতিকার\n

 -জাতীয় ভোক্তা অধিকার সংরক্ষণ অধিদপ্তর মহাপরিচালক বা তাঁর ক্ষমতাপ্রাপ্ত কোন কর্মকর্তা সমীচীন মনে করলে ফৌজদারি মামলা দায়েরের পরিবর্তে প্রশাসনিক ব্যবস্থায় শুধু জরিমানা আরোপ, ব্যবসার লাইসেন্স বাতিল বা ব্যবসায়িক কার্যক্রম সাময়িক বা স্থায়ীভাবে স্থগিত করতে পারবেন\n
 -প্রশাসনিক ব্যবস্থায় আরোপিত ও আদায়কৃত জরিমানার ২৫ শতাংশ আভিযোগকারী তাৎক্ষণিক ভাবে প্রাপ্য হবেন\n

ফৌজদারি আপিল\n

 সংক্ষুদ্ধ পক্ষ আদেশ প্রদানের ৬০ দিনের মধ্যে স্থানীয় অধিক্ষেত্রের সেশন জজের আদালতে আপিল দায়ের করতে পারবেন\n

দেওয়ানী আপিল\n

 যুগ্ম জেলা জজের আদালতের রায় ও ডিক্রির বিরুদ্ধে ৯০ দিনের মধ্যে কেবল হাইকোর্ট বিভাগে আপিল দায়ের করতে পারবেন\n
</string>
    <string name="dondoText" translatable="false">ক।  অনধিক ১ বছর কারাদন্ড বা অনধিক ৫০ হাজার টাকা অর্থ দন্ড বা উভয় দন্ড যোগ্য অপরাধ\n

 -পণ্যের মোড়ক ব্যবহার না করা বা মোড়কের গায়ে খুচরা বিক্রয় মূল্য, মেয়াদ উত্তীর্ণ তারিখ ইত্যাদি লেখা না থাকা\n
 -পণ্য ও সেবা মূল্য তালিকা সংরক্ষণ ও লটকায়ে প্রদর্শন না করা\n
 -নির্ধারিত মূল্যের অধিক মূল্যে কোন পণ্য, ঔষধ বা সেবা বিক্রয় বা বিক্রয়ের প্রস্তাব করা\n
 -প্রতিশ্রুত পণ্য বা সেবা যথাযথভাবে বিক্রয় বা সরবরাহ না করা\n
 -ওজনে, বাটখারা বা ওজন পরিমাপক যন্ত্রে কারচুপি করা\n
 -পরিমাপে, দৈর্ঘ্য পরিমাপক ফিতা বা অন্য কিছুতে কারচুপি করা\n
 -মেয়াদ উত্তীর্ণ পণ্য বা ঔষধ বিক্রয় বা বিক্রয়ের প্রস্তাব করা\n

খ। অনধিক ১ বছর কারাদন্ড বা অনধিক ২ লক্ষ টাকা অর্থ দন্ড বা উভয় দন্ড যোগ্য অপরাধ\n

 -মিথ্যা বিজ্ঞাপন দ্বারা ক্রেতা সাধারণকে প্রতারিত করা\n

গ। অনধিক ২ বছর কারাদন্ড বা অনধিক ১ লক্ষ্ টাকা অর্থ দন্ড বা উভয় দন্ড যোগ্য অপরাধ\n
\n
 -অবৈধ প্রক্রিয়ায় পণ্য উৎপাদন বা প্রক্রিয়াকরণ করা\n

ঘ। অনধিক ৩ বছর কারাদন্ড বা অনধিক ২ লক্ষ টাকা অর্থ দন্ড বা উভয় দন্ড যোগ্য অপরাধ\n

 -জেনে শুনে ভেজাল মিশ্রিত পণ্য বিক্রয় বা বিক্রয়ের প্রস্তাব করা\n
 -খাদ্য পণ্যে ক্ষতিকর নিষিদ্ধ দ্রব্য মিশ্রণ ও বিক্রয় করা\n
 -পণ্যের নকল প্রস্তুত বা উৎপাদন করা\n
 -সেবা গ্রহীতার জীবন বা নিরাপত্তা বিপন্নকারী কার্য করা\n
 -অবহেলা, দায়িত্বহীনতা দ্বারা সেবাগ্রহীতার অর্থ বা স্বাস্থ্যহানি ইত্যাদি ঘটানো\n

ঙ। অনধিক ৩ বছর কারাদন্ড বা অনধিক ৫০ হাজার টাকা অর্থ দন্ড বা উভয় দন্ড যোগ্য অপরাধ\n

 -মিথ্যা বা হারানীমুল্ক মামলা দায়ের করা\n

চ। অপরাধ পুনঃসংঘটনের দন্ড\n

 উক্ত অপরাধ সমূহে দন্ডিত ব্যক্তি পুনরায় একই অপরাধ করলে তিনি সর্বোচ্চ দন্ডের দ্বিগুণ দন্ডে দন্ডিত হবেন\n
</string>
    <string name="ovizogText" translatable="false">কে অভিযোগকারী হতে পারেন\n

 -কোন ভোক্তা\n
 -একই স্বার্থ সংশ্লিষ্ট এক বা একাধিক ভোক্তা\n
 -কোন আইনের অধীনে নিবন্ধিত কোন ভোক্তা সংস্থা\n
 -জাতীয় ভোক্তা অধিকার সংরক্ষণ পরিষদ বা তার পক্ষে অভিযোগ দায়েরের ক্ষমতা প্রাপ্ত কোন কর্মকর্তা\n
 -সরকার বা সরকার কর্তৃক ক্ষমতা প্রাপ্ত কোন সরকারী কর্মকর্তা\n
 -সংশ্লিষ্ট পাইকারী ও খুচরা ব্যবসায়ী\n

যেখানে অভিযোগ দায়ের করা যাবে\n



অভিযোগ দায়েরের সময়সীমা\n
\n
 কারণ উদ্ভব হওয়ার ৩০ দিনের মধ্যে অভিযোগ দায়ের করতে হবে\n
 যেভাবে অভিযোগ দায়ের করতে হবে\n
 -দায়েরকৃত অভিযোগ অবশ্যই লিখিত হতে হবে\n
 -ফ্যাক্স, ইমেল, ওয়েব সাইট ইত্যাদি ইলেকট্রনিক মাধ্যমে বা অন্য কোন উপায়ে\n
 -অভিযোগের সাথে পণ্য বা সেবা ক্রয়ের রশিদ সংযুক্ত করতে হবে\n
 -অভিযোগকারী তার পূর্ণাঙ্গ নাম, পিতা ও মাতার নাম, ঠিকানা, ফোন, ফ্যাক্স ও ইমেইল নাম্বার (যদি থাকে) এবং পেশা উল্লেখ করুন\n
</string>
    <string name="zogazogText" translatable="false">জাতীয় ভোক্তা অধিকার সংরক্ষণ অধিদপ্তর\n
বাণিজ্য মন্ত্রণালয়\n
১ কারওয়ান বাজার(টিসিবি ভবন-৮ম তলা), ঢাকা-১২১৫\n
ফোন / ফ্যাক্স: ৮৮-০২-৮১৮৯৪২৫, ৮৮-০২-৮১৮৯৪২৬, \n

০১৭৭৭-৭৫৩৬৬৮\n
      ই-মেইল: info@dncrp.gov.bd    \n\n\n

 

 

অভিযোগ করুনঃ জাতীয় ভোক্তা অভিযোগ কেন্দ্র:  ফোনঃ ০২-৫৫০১৩২১৮\n

মোবাইল: ০১৭৭৭-৭৫৩৬৬৮. \n

ই-মেইল: nccc@dncrp.gov.bd\n</string>
    <string name="title_activity_ovijog" translatable="false">Ovijog</string>

</resources>
